--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,32 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 12px;
+  padding: 15% 20%;
+    background: #FFEFBA;
+  background: linear-gradient(to right, #602ef1, #1bdbf8);
+  color: #fff
 }
 
 .App {
-  height: 100vh;
+  /* height: 100vh; */
   /* width: 120vh; */
-  background: #FFEFBA;
-  background: linear-gradient(to right, #FFFFFF, #FFEFBA);
+
+}
+
+.greeting {
+  font-size: 24px;
+}
+
+.landingButton {
+  height: 30px;
+  width: 60px;
+  border-radius: 20px;
 }
 
 .buttons {
-  height: 80px;
-  width: 120px;
-  background-color: red;
+  height: 30px;
+  width: 60px;
+  border-radius: 20px;
 }
 
 .wellness {
@@ -78,8 +90,6 @@ ul.ks-cboxtags li label::before {
 
 ul.ks-cboxtags li input[type="checkbox"]:checked + label::before {
     content: "\f00c";
-    transform: rotate(-360deg);
-    transition: transform .3s ease-in-out;
 }
 
 ul.ks-cboxtags li input[type="checkbox"]:checked + label {
